# rnnoise-win64

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
lib/: rnnoise.lib
